egit index4 and i4-frames

--- a/i4-frame2.html
+++ b/i4-frame2.html
@@ -2,9 +2,30 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Title</title>
 </head>
 <body>
-
+<table border="1">
+    <tr>
+        <th colspan="2" rowspan="2"></th>
+        <th colspan="2">Среднее</th>
+    </tr>
+    <tr>
+        <th>Рост</th>
+        <th>Вес</th>
+    </tr>
+    <tr>
+        <th width="25%" rowspan="2">Объект</th>
+        <th width="25%" align="left">A</th>
+        <td width="25%">1.9</td>
+        <td width="25%">0.003</td>
+    </tr>
+    <tr>
+        <th align="right">B</th>
+        <td>1.7</td>
+        <td>0.002</td>
+    </tr>
+</table>
 </body>
 </html>
