--- a/index4.html
+++ b/index4.html
@@ -1,12 +1,13 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-        "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Frameset//EN"
+        "http://www.w3.org/TR/html4/frameset.dtd">
 <html>
 <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <title>Title</title>
 </head>
-<FRAMESET ROWS = "50%, *">
+<FRAMESET ROWS = "40%, *">
     <FRAME SRC = "i4-frame2.html" NAME="frame2">
-    <FRAMESET COLS ="30%, 30%, 40%">
+    <FRAMESET COLS ="100, 65%, *">
         <FRAME SRC = "i4-frame1.html" NAME="frame1">
         <FRAME SRC = "i4-frame4.html" NAME="frame4">
         <FRAME SRC = "i4-frame3.html" NAME="frame3">
