edit titles and create timetable

--- a/i5-frame4.html
+++ b/i5-frame4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Кокорин Егор Дмитриевич</title>
 </head>
 <body>
 <h4>Информационные технологии - <i>Шмакова Н.А.</i></h4>
