--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Кокорин Егор Дмитриевич</title>
 </head>
 <body>
 <iframe src="i5-frame2.html" height="282" width="1350"></iframe>
