--- a/i4-frame2.html
+++ b/i4-frame2.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Title</title>
+    <title>Кокорин Егор Дмитриевич</title>
 </head>
 <body>
 <table border="1">
