--- a/i4-frame4.html
+++ b/i4-frame4.html
@@ -3,7 +3,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Title</title>
+    <title>Кокорин Егор Дмитриевич</title>
 </head>
 <body>
 <h4>Информационные технологии - <i>Шмакова Н.А.</i></h4>
