--- a/lab2_index.html
+++ b/lab2_index.html
@@ -39,5 +39,78 @@
         </table>
     </div>
 </header>
+<footer>
+    <div>
+        <table>
+            <tr>
+                <td rowspan="6"><pre>         </pre></td>
+                <td><h2>Wonder app</h2></td>
+                <td rowspan="6"><pre>              </pre></td>
+                <td><h4>Product</h4></td>
+                <td rowspan="6"><pre>                 </pre></td>
+                <td><h4>Solutions</h4></td>
+                <td rowspan="6"><pre>                 </pre></td>
+                <td><h4>Customers</h4></td>
+                <td rowspan="6"><pre>                 </pre></td>
+                <td><h4>Resources</h4></td>
+                <td rowspan="6"><pre>                 </pre></td>
+                <td><h4>About Us</h4></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><h5>Features</h5></td>
+                <td><h5>Overview</h5></td>
+                <td><h5>Highlights</h5></td>
+                <td><h5>Documentation</h5></td>
+                <td><h5>Our Company</h5></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><h5>Pricing</h5></td>
+                <td><h5>Tech</h5></td>
+                <td><h5>Case Studies</h5></td>
+                <td><h5>eBooks</h5></td>
+                <td><h5>Careers</h5></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><h5>Comparison</h5></td>
+                <td><h5>Government</h5></td>
+                <td></td>
+                <td><h5>Podcast</h5></td>
+                <td><h5>Contact Us</h5></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td><h5>Updates</h5></td>
+                <td><h5>Non-Profit</h5></td>
+                <td></td>
+                <td><h5>Blog</h5></td>
+                <td><h5>News</h5></td>
+            </tr>
+            <tr>
+                <td></td>
+                <td></td>
+                <td><h5>Financial Services</h5></td>
+                <td></td>
+                <td><h5>Resources</h5></td>
+                <td></td>
+            </tr>
+            <tr>
+                <td colspan="11"><pre>
+                    </pre></td>
+            </tr>
+        </table>
+    </div>
+    <hr>
+    <div>
+        <table>
+            <tr>
+                <td><pre>                                                                                  </pre></td>
+                <td>(c) 2021 Example, Inc</td>
+            </tr>
+        </table>
+    </div>
+</footer>
 </body>
 </html>
