edit "get started"

--- a/lab2_index.html
+++ b/lab2_index.html
@@ -33,27 +33,42 @@
                     <pre>       </pre>
                 </td>
                 <td>
-                    <fieldset><h4>Get Srarted</h4></fieldset>
+                    <fieldset><h4>Get Started</h4></fieldset>
                 </td>
             </tr>
         </table>
     </div>
 </header>
+<main>
+
+</main>
 <footer>
     <div>
         <table>
             <tr>
-                <td rowspan="6"><pre>         </pre></td>
+                <td rowspan="6">
+                    <pre>         </pre>
+                </td>
                 <td><h2>Wonder app</h2></td>
-                <td rowspan="6"><pre>              </pre></td>
+                <td rowspan="6">
+                    <pre>              </pre>
+                </td>
                 <td><h4>Product</h4></td>
-                <td rowspan="6"><pre>                 </pre></td>
+                <td rowspan="6">
+                    <pre>                 </pre>
+                </td>
                 <td><h4>Solutions</h4></td>
-                <td rowspan="6"><pre>                 </pre></td>
+                <td rowspan="6">
+                    <pre>                 </pre>
+                </td>
                 <td><h4>Customers</h4></td>
-                <td rowspan="6"><pre>                 </pre></td>
+                <td rowspan="6">
+                    <pre>                 </pre>
+                </td>
                 <td><h4>Resources</h4></td>
-                <td rowspan="6"><pre>                 </pre></td>
+                <td rowspan="6">
+                    <pre>                 </pre>
+                </td>
                 <td><h4>About Us</h4></td>
             </tr>
             <tr>
@@ -98,7 +113,8 @@
             </tr>
             <tr>
                 <td colspan="11"><pre>
-                    </pre></td>
+                    </pre>
+                </td>
             </tr>
         </table>
     </div>
@@ -106,7 +122,9 @@
     <div>
         <table>
             <tr>
-                <td><pre>                                                                                  </pre></td>
+                <td>
+                    <pre>                                                                                  </pre>
+                </td>
                 <td>(c) 2021 Example, Inc</td>
             </tr>
         </table>
