edit form (zip) and add main in index

--- a/lab2_form.html
+++ b/lab2_form.html
@@ -22,7 +22,7 @@
                 <br><input autocomplete=on type="text" id="state" size="24" required>
             </td>
             <td><label for="zip">Zip:</label>
-                <br><input autocomplete=on type="number" id="zip" required></td>
+                <br><input autocomplete=on type="text" id="zip" required></td>
             <td>Country:<br><select>
                 <option value=1 selected>United States</option>
                 <option value=2>United Kingdom</option>
