--- a/lab2_index.html
+++ b/lab2_index.html
@@ -40,9 +40,83 @@
     </div>
 </header>
 <main>
+    <div class="title">
+        <table>
+            <tr>
+                <td colspan="4"><pre>
 
+
+                    </pre>
+                </td>
+                <td></td>
+            </tr>
+            <tr>
+                <td rowspan="4">
+                    <pre>          </pre>
+                </td>
+                <td colspan="2"><h1>It's better than<br>sliced bread!</h1></td>
+                <td rowspan="4">
+                    <pre>                                       </pre>
+                </td>
+                <td rowspan="4"><img src=./images/img1.png alt="img"></td>
+            </tr>
+            <tr>
+                <td colspan="2"><h4>Tell the world how awesome your app is and<br>why they should use it!!</h4></td>
+            </tr>
+            <tr>
+                <td>
+                    <fieldset>
+                        <table>
+                            <tr>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td></td>
+                                <td>Buy</td>
+                            </tr>
+                        </table>
+                    </fieldset>
+                </td>
+                <td>
+                    <pre>           </pre>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2"><pre>
+                    </pre>
+                </td>
+            </tr>
+            <tr>
+                <td colspan="5"><pre>
+
+
+
+
+
+
+
+
+
+
+
+                    </pre>
+                </td>
+            </tr>
+        </table>
+    </div>
 </main>
 <footer>
+    <hr>
     <div>
         <table>
             <tr>
