--- a/lab2_index.html
+++ b/lab2_index.html
@@ -40,7 +40,7 @@
     </div>
 </header>
 <main>
-    <div class="title">
+    <div>
         <table>
             <tr>
                 <td colspan="4"><pre>
@@ -114,6 +114,46 @@
             </tr>
         </table>
     </div>
+    <section>
+        <div>
+            <table>
+                <tr>
+                    <td><pre>                                                                                       </pre></td>
+                    <td><h2>Features</h2></td>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    <td rowspan="3"><pre>                    </pre></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                </tr>
+                <tr>
+                    <td><img src=./images/img2.png alt="img"></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                </tr>
+                <tr>
+                    <td><pre>       </pre></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td colspan="6"><pre>
+                    </pre></td>
+                </tr>
+            </table>
+        </div>
+    </section>
 </main>
 <footer>
     <hr>
@@ -186,7 +226,7 @@
                 <td></td>
             </tr>
             <tr>
-                <td colspan="11"><pre>
+                <td colspan="12"><pre>
                     </pre>
                 </td>
             </tr>
