add Features and HC in index, add images

--- a/lab2_index.html
+++ b/lab2_index.html
@@ -149,7 +149,35 @@
                 </tr>
                 <tr>
                     <td colspan="6"><pre>
+
                     </pre></td>
+                </tr>
+            </table>
+        </div>
+    </section>
+    <section>
+        <div>
+            <table>
+                <tr>
+                    <td><pre>                                                                                </pre></td>
+                    <td><h2>Happy Customers</h2></td>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    <td><pre>                    </pre></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                    <td><img src=./images/img2.png alt="img"></td>
+                </tr>
+                <tr>
+                    <td colspan="6"><pre>
+
+                        </pre></td>
                 </tr>
             </table>
         </div>
