--- a/lab2_index.html
+++ b/lab2_index.html
@@ -118,7 +118,9 @@
         <div>
             <table>
                 <tr>
-                    <td><pre>                                                                                       </pre></td>
+                    <td>
+                        <pre>                                                                                       </pre>
+                    </td>
                     <td><h2>Features</h2></td>
                 </tr>
             </table>
@@ -126,7 +128,9 @@
         <div>
             <table>
                 <tr>
-                    <td rowspan="3"><pre>                    </pre></td>
+                    <td rowspan="3">
+                        <pre>                    </pre>
+                    </td>
                     <td><img src=./images/img2.png alt="img"></td>
                     <td><img src=./images/img2.png alt="img"></td>
                     <td><img src=./images/img2.png alt="img"></td>
@@ -141,7 +145,9 @@
                     <td><img src=./images/img2.png alt="img"></td>
                 </tr>
                 <tr>
-                    <td><pre>       </pre></td>
+                    <td>
+                        <pre>       </pre>
+                    </td>
                     <td><img src=./images/img2.png alt="img"></td>
                     <td><img src=./images/img2.png alt="img"></td>
                     <td><img src=./images/img2.png alt="img"></td>
@@ -150,7 +156,8 @@
                 <tr>
                     <td colspan="6"><pre>
 
-                    </pre></td>
+                    </pre>
+                    </td>
                 </tr>
             </table>
         </div>
@@ -159,7 +166,9 @@
         <div>
             <table>
                 <tr>
-                    <td><pre>                                                                                </pre></td>
+                    <td>
+                        <pre>                                                                                </pre>
+                    </td>
                     <td><h2>Happy Customers</h2></td>
                 </tr>
             </table>
@@ -167,7 +176,9 @@
         <div>
             <table>
                 <tr>
-                    <td><pre>                    </pre></td>
+                    <td>
+                        <pre>                    </pre>
+                    </td>
                     <td><img src=./images/img2.png alt="img"></td>
                     <td><img src=./images/img2.png alt="img"></td>
                     <td><img src=./images/img2.png alt="img"></td>
@@ -177,11 +188,224 @@
                 <tr>
                     <td colspan="6"><pre>
 
-                        </pre></td>
+                        </pre>
+                    </td>
                 </tr>
             </table>
         </div>
     </section>
+    <section>
+        <div>
+            <table>
+                <tr>
+                    <td>
+                        <pre>                                                                               </pre>
+                    </td>
+                    <td><h2>Dead simple pricing</h2></td>
+                </tr>
+            </table>
+        </div>
+        <div>
+            <table>
+                <tr>
+                    <td rowspan="2">
+                        <pre>                                                        </pre>
+                    </td>
+                    <td></td>
+                    <td rowspan="2">
+                        <fieldset>
+                            <table>
+                                <tr>
+                                    <td></td>
+                                    <td><h3>Professional</h3></td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2"></td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2"></td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <pre> </pre>
+                                    </td>
+                                    <td>Up to 20 users</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <pre></pre>
+                                    </td>
+                                    <td>6 dogs</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <pre>   </pre>
+                                    </td>
+                                    <td>23 goldfish</td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2"></td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2"></td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <pre>   </pre>
+                                    </td>
+                                    <td>$99/wo</td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2">
+                                        <fieldset>Start Free Trail</fieldset>
+                                    </td>
+                                </tr>
+                            </table>
+                        </fieldset>
+                    </td>
+                    <td></td>
+                </tr>
+                <tr>
+                    <td>
+                        <fieldset>
+                            <table>
+                                <tr>
+                                    <td>
+                                        <pre>     </pre>
+                                    </td>
+                                    <td><h3>Starter</h3></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <pre></pre>
+                                    </td>
+                                    <td>Up to 5 users</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>2 dogs</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <pre></pre>
+                                    </td>
+                                    <td>8 goldfish</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td colspan="6"></td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <pre></pre>
+                                    </td>
+                                    <td>$35/wo</td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                                <tr>
+                                    <td colspan="3">
+                                        <fieldset>Start Free Trail</fieldset>
+                                    </td>
+                                    <td colspan="3"></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                    <td></td>
+                                </tr>
+                            </table>
+                        </fieldset>
+                    </td>
+                    <td>
+                        <fieldset>
+                            <table>
+                                <tr>
+                                    <td>
+                                        <pre>      </pre>
+                                    </td>
+                                    <td><h3>Enterprise</h3></td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2"></td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <pre></pre>
+                                    </td>
+                                    <td>Custom user-based</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <pre></pre>
+                                    </td>
+                                    <td>pricing for orgs</td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <pre></pre>
+                                    </td>
+                                    <td>with 20+ users</td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2"></td>
+                                </tr>
+                                <tr>
+                                    <td></td>
+                                    <td>Starting at $35/user/wo</td>
+                                </tr>
+                                <tr>
+                                    <td colspan="2">
+                                        <fieldset>
+                                            <table>
+                                                <tr>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td></td>
+                                                    <td>Contact Us</td>
+                                                </tr>
+                                            </table>
+                                        </fieldset>
+                                    </td>
+                                </tr>
+                            </table>
+                        </fieldset>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </section>
+    <pre>
+    </pre>
 </main>
 <footer>
     <hr>
