--- a/index.html
+++ b/index.html
@@ -41,7 +41,42 @@
             <img class="mt-16" src="./img/startimg.svg" alt="startimg">
         </div>
     </section>
-
 </header>
+<footer id="footer" class="mt-32 flex flex-col items-center">
+    <div class="mt-32 mb-32 container flex justify-between px-40 text-gray-300">
+        <div class="mt-4">
+            <img src="./img/logo_bot.svg" alt="logo">
+            <p class="pt-4">
+                Trafalgar provides progressive, and affordable <br>
+                healthcare, accessible on mobile and online <br>
+                for everyone
+            </p>
+            <p class="pt-8">
+                ©Trafalgar PTY LTD 2020. All rights reserved
+            </p>
+        </div>
+        <div>
+            <p class="pt-4 font-bold text-white">Company</p>
+            <p class="pt-4">About</p>
+            <p class="pt-4">Testimonials</p>
+            <p class="pt-4">Find a doctor</p>
+            <p class="pt-4">Apps</p>
+        </div>
+        <div>
+            <p class="pt-4 font-bold text-white">Region</p>
+            <p class="pt-4">Indonesia</p>
+            <p class="pt-4">Singapore</p>
+            <p class="pt-4">Hongkong</p>
+            <p class="pt-4">Canada</p>
+        </div>
+        <div>
+            <p class="pt-4 font-bold text-white">Help</p>
+            <p class="pt-4">Help center</p>
+            <p class="pt-4">Contact support</p>
+            <p class="pt-4">Instructions</p>
+            <p class="pt-4">How it works</p>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
