--- a/index.html
+++ b/index.html
@@ -42,6 +42,98 @@
         </div>
     </section>
 </header>
+<main>
+    <section id="section2" class="mt-48">
+        <h1 class="text-center text-3xl font-bold">
+            Our services
+        </h1>
+        <div class="mt-6 mb-8 flex flex-col items-center ">
+            <img src="./img/line.svg" alt="line">
+        </div>
+        <p class=" text-center text-s text-gray-500">
+            We provide to you the best choiches for you. Adjust it to your health needs and make sure your undergo
+            treatment <br>
+            with our highly qualified doctors you can consult with us which type of service is suitable for your health
+        </p>
+        <div class="mt-20 flex flex-col items-center ">
+            <div class="flex justify-between items-center">
+                <div class="rounded-lg border-2 shadow-xl">
+                    <img class="mt-12 ml-8" src="./img/search.svg" alt="search">
+                    <h2 class=" mt-5 ml-8 text-xl font-bold">
+                        Search doctor
+                    </h2>
+                    <p class=" ml-8 mr-12 mb-12 text-s text-gray-500">
+                        Choose your doctor from thousands <br>
+                        of specialist, general, and trusted <br>
+                        hospitals
+                    </p>
+                </div>
+                <div class="ml-8 mr-8 rounded-lg border-2 shadow-xl">
+                    <img class="mt-12 ml-8" src="./img/piluli.svg" alt="piluli">
+                    <h2 class=" mt-5 ml-8 text-xl font-bold">
+                        Online pharmacy
+                    </h2>
+                    <p class=" ml-8 mr-12 mb-12 text-s text-gray-500">
+                        Buy your medicines with our <br>
+                        mobile application with a simple <br>
+                        delivery system
+                    </p>
+                </div>
+                <div class="rounded-lg border-2 shadow-xl">
+                    <img class="mt-12 ml-8" src="./img/consultation.svg" alt="consultation">
+                    <h2 class=" mt-5 ml-8 text-xl font-bold">
+                        Consultation
+                    </h2>
+                    <p class=" ml-8 mr-12 mb-12 text-s text-gray-500">
+                        Free consultation with our trusted <br>
+                        doctors and get the best <br>
+                        recomendations
+                    </p>
+                </div>
+            </div>
+            <div class="mt-8 flex justify-between items-center">
+                <div class="rounded-lg border-2 shadow-xl">
+                    <img class="mt-12 ml-8" src="./img/detalsInfo.svg" alt="detalsinfo">
+                    <h2 class=" mt-5 ml-8 text-xl font-bold">
+                        Details info
+                    </h2>
+                    <p class=" ml-8 mr-12 mb-12 text-s text-gray-500">
+                        Free consultation with our trusted <br>
+                        doctors and get the best <br>
+                        recomendations
+                    </p>
+                </div>
+                <div class="ml-8 mr-8 rounded-lg border-2 shadow-xl">
+                    <img class="mt-16 ml-8" src="./img/CarHelp.svg" alt="CarHelp">
+                    <h2 class=" mt-5 ml-8 text-xl font-bold">
+                        Emergency care
+                    </h2>
+                    <p class=" ml-8 mr-12 mb-12 text-s text-gray-500">
+                        You can get 24/7 urgent care for <br>
+                        yourself or your children and your <br>
+                        lovely family
+                    </p>
+                </div>
+                <div class="rounded-lg border-2 shadow-xl">
+                    <img class="mt-12 ml-8" src="./img/tracking.svg" alt="tracking">
+                    <h2 class=" mt-5 ml-8 text-xl font-bold">
+                        Tracking
+                    </h2>
+                    <p class=" ml-8 mr-12 mb-16 text-s text-gray-500">
+                        Track and save your medical history <br>
+                        and health data
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="mt-16 flex flex-col items-center">
+            <button onclick="button_su()"
+                    class="mr-6 px-10 py-3 mt-4 content-center rounded-3xl border-2 border-blue-600 focus:outline-none rounded-xl transition duration-500 ease-in-out hover: transform hover:-translate-y-1 hover:scale-110">
+                <span class="text-blue-600">Learn more</span>
+            </button>
+        </div>
+    </section>
+</main>
 <footer id="footer" class="mt-32 flex flex-col items-center">
     <div class="mt-32 mb-32 container flex justify-between px-40 text-gray-300">
         <div class="mt-4">
