--- a/index.html
+++ b/index.html
@@ -133,6 +133,52 @@
             </button>
         </div>
     </section>
+    <section class="mt-56 flex flex-col items-center ">
+        <div class="flex justify-between items-center">
+            <img src="./img/imgsec3.svg" alt="imgsection3">
+            <div class="ml-32">
+                <h1 class="text-3xl font-bold">
+                    Leading healthcare <br>
+                    providers
+                </h1>
+                <img class="mt-6 mb-8" src="./img/line.svg" alt="line">
+                <p class="text-s text-gray-500">
+                    Trafalgar provides progressive, and affordable <br>
+                    healthcare, accessible on mobile and online for <br>
+                    everyone. To us, it’s not just work. We take pride<br>
+                    in the solutions we deliver
+                </p>
+                <button onclick="button_su()"
+                        class="mt-10 mr-6 px-10 py-3 mt-4 content-center rounded-3xl border-2 border-blue-600 focus:outline-none rounded-xl transition duration-500 ease-in-out hover: transform hover:-translate-y-1 hover:scale-110">
+                    <span class="text-blue-600">Learn more</span>
+                </button>
+            </div>
+        </div>
+    </section>
+    <div class="flex flex-col items-center">
+        <img class="ml-2" src="./img/element1.svg" alt="element">
+    </div>
+    <section class="mt-32 flex flex-col items-center">
+        <div class="flex justify-between items-center">
+            <div class="mr-16">
+                <h1 class="text-3xl font-bold">
+                    Download our<br>
+                    mobile apps
+                </h1>
+                <img class="mt-8 mb-8" src="./img/line.svg" alt="line">
+                <p class="text-s text-gray-500">
+                    Our dedicated patient engagement app and<br>
+                    web portal allow you to access information <br>
+                    instantaneously (no tedeous form, long calls,<br>
+                    or administrative hassle) and securely
+                </p>
+                <button onclick="button_su()" class="mt-10 mr-6 px-10 py-3 mt-4 content-center rounded-3xl border-2 border-blue-600 focus:outline-none rounded-xl transition duration-500 ease-in-out hover: transform hover:-translate-y-1 hover:scale-110">
+                    <span class="text-blue-600">Learn more</span>
+                </button>
+            </div>
+            <img src="./img/imgsec4.svg" alt="imgsection4">
+        </div>
+    </section>
 </main>
 <footer id="footer" class="mt-32 flex flex-col items-center">
     <div class="mt-32 mb-32 container flex justify-between px-40 text-gray-300">
