--- a/index.html
+++ b/index.html
@@ -172,11 +172,116 @@
                     instantaneously (no tedeous form, long calls,<br>
                     or administrative hassle) and securely
                 </p>
-                <button onclick="button_su()" class="mt-10 mr-6 px-10 py-3 mt-4 content-center rounded-3xl border-2 border-blue-600 focus:outline-none rounded-xl transition duration-500 ease-in-out hover: transform hover:-translate-y-1 hover:scale-110">
+                <button onclick="button_su()"
+                        class="mt-10 mr-6 px-10 py-3 mt-4 content-center rounded-3xl border-2 border-blue-600 focus:outline-none rounded-xl transition duration-500 ease-in-out hover: transform hover:-translate-y-1 hover:scale-110">
                     <span class="text-blue-600">Learn more</span>
                 </button>
             </div>
             <img src="./img/imgsec4.svg" alt="imgsection4">
+        </div>
+    </section>
+    <section class="mt-48 flex flex-col items-center">
+        <div id="section5" class="flex flex-col items-center">
+            <h1 class="mt-16 text-white text-3xl font-bold">
+                What our customer are saying
+            </h1>
+            <img class="mt-6" src="./img/lineW.svg" alt="line">
+            <div class="mt-16 mb-20 flex justify-between items-center">
+                <div class="flex justify-between items-center">
+                    <img class="mr-8 mb" src="./img/chel.svg" alt="chel">
+                    <div>
+                        <p class="text-white font-bold text-s">
+                            Edward Newgate
+                        </p>
+                        <p class="text-white text-s">
+                            Founder Circle
+                        </p>
+                    </div>
+                </div>
+                <p class="ml-24 text-white text-s">
+                    “Our dedicated patient engagement app and<br>
+                    web portal allow you to access information <br>
+                    instantaneously (no tedeous form, long calls,<br>
+                    or administrative hassle) and securely”
+                </p>
+            </div>
+            <img class="mt-4" src="./img/nav.svg" alt="nav">
+        </div>
+    </section>
+    <section id="section6" class="mt-56 flex flex-col items-center">
+        <div class="flex flex-col items-center">
+            <h1 class="text-center text-3xl font-bold">
+                Check out our latest article
+            </h1>
+            <img class="mt-6" src="./img/line.svg" alt="line">
+            <div class="mt-20 flex justify-between items-center">
+                <div class="rounded-3xl border-2 shadow-xl">
+                    <img src="./img/article1.svg" alt="article1">
+                    <div class="mt-5 ml-8">
+                        <h2 class="text-xl font-bold">
+                            Disease detection, check<br>
+                            up in the laboratory
+                        </h2>
+                        <p class="mt-3 mb-6 text-s text-gray-500">
+                            In this case, the role of the health<br>
+                            laboratory is very important to do<br>
+                            a disease detection...
+                        </p>
+                        <div class="flex">
+                            <p class="text-blue-600 text-s">
+                                Read more
+                            </p>
+                            <img class="ml-2 mt-1 mb-8" src="./img/vector.svg" alt="vector">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ml-8 mr-8 rounded-3xl border-2 shadow-xl">
+                    <img src="./img/article2.svg" alt="article2">
+                    <div class="mt-5 ml-8">
+                        <h2 class="text-xl font-bold">
+                            Herbal medicines that are <br>
+                            safe for consumption
+                        </h2>
+                        <p class="mt-3 mb-6 text-s text-gray-500">
+                            Herbal medicine is very widely used<br>
+                            at this time because of its very good<br>
+                            for your health...
+                        </p>
+                        <div class="flex">
+                            <p class="text-blue-600 text-s">
+                                Read more
+                            </p>
+                            <img class="ml-2 mt-1 mb-8 " src="./img/vector.svg" alt="vector">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="rounded-3xl border-2 shadow-xl">
+                    <img src="./img/article3.svg" alt="article3">
+                    <div class="mt-5 ml-8">
+                        <h2 class="text-xl font-bold">
+                            Natural care for healthy<br>
+                            facial skin
+                        </h2>
+                        <p class="mt-3 mb-6 text-s text-gray-500">
+                            A healthy lifestyle should start from<br>
+                            now and also for your skin health.<br>
+                            There are some...
+                        </p>
+                        <div class="flex">
+                            <p class="text-blue-600 text-s">
+                                Read more
+                            </p>
+                            <img class="ml-2 mt-1 mb-8" src="./img/vector.svg" alt="vector">
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <button onclick="button_su()"
+                    class="mt-16 px-12 py-3 mt-4 content-center rounded-3xl border-2 border-blue-600 focus:outline-none rounded-xl transition duration-500 ease-in-out hover: transform hover:-translate-y-1 hover:scale-110">
+                <span class="text-blue-600">View all</span>
+            </button>
         </div>
     </section>
 </main>
