--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -417,7 +417,7 @@
         </section>
 
         <section class=" flex flex-col items-center">
-            <div class="container bg-gray-100 py-16 flex justify-between px-48 items-center w-full">
+            <div class="container-fluid w-full bg-gray-100 py-16 flex justify-between px-48 items-center">
                 <p class="text-3xl"><strong>Ready to chase your dreams? </strong></p>
                 <button class=" bg-indigo-500 flex text-white items-center px-10 py-3 rounded-lg focus:outline-none"
                         onclick="knopka()">
@@ -430,7 +430,7 @@
 </main>
 
 <footer class="flex flex-col items-center">
-    <div class="container flex justify-between px-36 pt-16 pb-12 bg-indigo-500 text-gray-300">
+    <div class="container-fluid w-full flex justify-between px-36 pt-16 pb-12 bg-indigo-500 text-gray-300">
         <div>
             <img src="./Images/logo_bot.png" alt="">
             <p class="pt-6">Concord Royal Court (3rd floor)<br>
